# simple-task-tracker

./: README.md  pyproject.toml
app/: main.py  requirements.txt
app/api/: routes.py
app/tasks/: sample.py
instruct-doc/: Celery_init.txt  Uvicorn_init.txt  postman_instruct.txt  pull_packages.txt
